# line-art-paint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  gui_example.cpp
include/: dinic.hpp  edmonds_karp.hpp  graph_utils.hpp  matrix.hpp  matrix_utils.hpp  painter.hpp
src/: graph_utils.cpp  main.cpp  matrix_utils.cpp  painter.cpp
test/: matrix_test.cpp
